fix deprecated KeyEvent usage